--- a/css/forms.css
+++ b/css/forms.css
@@ -1,31 +1,25 @@
 /* this stylesheet is to be used to style forms used within addcard and index */
 /* font-family: 'Roboto', sans-serif; id like to add this as the main font*/
 
-/* .formDiv {
-    display: flex;
-    flex-direction: column;
-  
-
+body {
+    color:aliceblue;
+    text-shadow: 0 0 30px black;
 }
-.btn {
-    
-} */
 .grid-container {
     height: 300px;
     max-width: 900px;
-    display: grid;
+    margin:auto;
 }
 .formDiv {
     display: grid;
     grid-area: calc(100vw / 3);
     margin: 10px;
 }
-.btn {
+button {
     display: flex;
-    flex-direction: ;
     height: 25px;
-    width: 200px;
-    margin: 10px;
+    width: fit-content;
+    margin:auto;
 
     
 }
@@ -35,12 +29,12 @@ input {
     padding: 10px;
     margin: 10px, 10px;
 }
-#category {
-    width: 200px;
+
+#user-name-form {
+    max-width: 300px;
+    margin: auto;
+    padding: 50px;
 }
 nav {
     text-decoration: none;
-}
-nav a:hover {
-    background-color: rgba(240, 240, 240, .3);
 }
