--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body {
         linear-gradient(rgba(2, 1, 1, 0.346),
             rgba(0, 0, 0, 0.401)),
         url(/css/img/wood1.jpg);
-
 }
+
 
 nav {
     display: flex;
@@ -21,6 +21,10 @@ nav a {
     color: white;
     text-decoration: none;
 }
+nav a:hover {
+    background-color: rgba(240, 240, 240, .3);
+}
+
 
 h1 {
     text-align: center;
