--- a/css/cardstyle.css
+++ b/css/cardstyle.css
@@ -83,6 +83,8 @@ button:active {
     margin: 60%;
     margin-top: 20px;
     width: 120px;
+    background-color: #2531DB;
+    color: white;
      
 }
 
