--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ footer {
     width: 100%;
     padding: 1px;
     border-radius: 4px;
-    background-color: rgba(220, 220, 220, 1);
+    background-color: #ABB7B7;
     text-align: center;
-    color:aliceblue;
+    color: #FCFCFD;
+    font-size: 16px;
+    text-emphasis: bold;
 }
