--- a/css/cardstyle.css
+++ b/css/cardstyle.css
@@ -6,14 +6,16 @@
 }
 
 #card-front {
-    margin: auto;
-    width: 600px;
-    height: 400px;
-    border:3px solid #ABB7B7;
-    border-radius: 4px;
-    background-color: #FCFCFD;
-    z-index: 0;
-   
+  margin: auto;
+  width: 600px;
+  height: 400px;
+  border: 3px solid #ABB7B7;
+  border-radius: 4px;
+  background-color: #FCFCFD;
+  z-index: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #answers-area {
