--- a/css/forms.css
+++ b/css/forms.css
@@ -6,7 +6,7 @@ body {
     text-shadow: 0 0 30px black;
 }
 .grid-container {
-    height: 300px;
+    height: 400px;
     max-width: 900px;
     margin:auto;
 }
@@ -16,19 +16,30 @@ body {
     margin: 10px;
 }
 button {
-    display: flex;
+    display: inline-flex;
     height: 25px;
     width: fit-content;
-    margin:auto;
-    
+    margin:5px;
+        
+}
+button:hover {
+    background-color: #2531DB;
 
-    
 }
 input {
     display: flex;
     flex-direction: column;
     padding: 10px;
     margin: 10px, 10px;
+}
+legend {
+    font-size:25px;
+    padding-bottom: 10px;
+}
+label {
+    font-size:25px;
+    padding-bottom: 10px;
+
 }
 
 #user-name-form {
