--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     background-image:
         linear-gradient(rgba(2, 1, 1, 0.346),
             rgba(0, 0, 0, 0.401)),
-        url(/css/img/wood1.jpg);
+        url(./css/img/wood1.jpg);
 }
 
 
