--- a/css/forms.css
+++ b/css/forms.css
@@ -5,8 +5,9 @@ body {
     color:aliceblue;
     text-shadow: 0 0 30px black;
 }
+
 .grid-container {
-    height: 300px;
+    height: 400px;
     max-width: 900px;
     margin:auto;
 }
@@ -16,18 +17,55 @@ body {
     margin: 10px;
 }
 button {
-    display: flex;
-    height: 25px;
+    align-items: center;
     width: fit-content;
-    margin:auto;
+    appearance: none;
+    background-color: #FCFCFD;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #36395A;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono",monospace;
+    height: 25px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding:16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
+    font-size: 14px;
+    margin: 5px;
+        
+}
+button:hover {
+    background-color: #2531DB;
 
-    
 }
 input {
     display: flex;
     flex-direction: column;
     padding: 10px;
     margin: 10px, 10px;
+}
+legend {
+    font-size:25px;
+    padding-bottom: 10px;
+}
+label {
+    font-size:25px;
+    padding-bottom: 10px;
+
 }
 
 #user-name-form {
