--- a/css/forms.css
+++ b/css/forms.css
@@ -7,7 +7,7 @@ body {
 }
 
 .grid-container {
-    height: 400px;
+    height: 420px;
     max-width: 900px;
     margin:auto;
 }
@@ -48,8 +48,21 @@ button {
     margin: 5px;
         
 }
-button:hover {
+
+.btn {
+    height: 35px;
     background-color: #2531DB;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#6B6D8F 0 -3px 0 inset;
+    color: white;
+}
+
+.btn:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#6B6D8F 0 -3px 0 inset;
+}
+
+button:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
 
 }
 input {
