--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* This stylesheet covers the basic styling and is linked to each page */
+
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(240, 240, 240, 1);
